# cmux-linux

./: Cargo.toml  README.md  flake.nix
cmux/: Cargo.toml
cmux/src/: app.rs  main.rs
cmux/src/model/: panel.rs
cmux/src/socket/: v2.rs
cmux/src/ui/: terminal_panel.rs  window.rs
